<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JobGlass</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="maps">Mapas</string>
    <string name="test">Oferta</string>
    <string name="ofertas">Ofertas</string>
    <string name="notification">Notifications</string>
    <string name="ofertaID">ID Oferta</string>
    <string name="ofertaIDvalue">001</string>
    <string name="ofertaNombre">Nombre</string>
    <string name="ofertaNombreValor">Endodoncista (DENTIX)</string>
    <string name="ofertaCondiciones">Condiciones</string>
    <string name="ofertaCondicionesValor">Salario: 1200€/mes</string>
    <string name="ofertaCondicionesValor1">Tipo: Jornada completa</string>
    <string name="mandarCV">Mandar CV</string>
    <string name="eliminar">Eliminar</string>
    <string name="misOfertas">Mis Ofertas</string>

</resources>